--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Brigham Young University. I enjoy cooking, reading, programming, and listening to podcasts.</p>
     <p>I am from Idaho Falls, ID origionally. I am currenly applying to medical
       schools and will hopefully be attending in the Fall of 2022.</p>
-    <p>I am currently taking CS 260, CS 330, and BIO 364.</p>
+    <p>I am currently taking CS 260, CS 330, BIO 364, and MUSIC 201.</p>
     <h2>Projects:</h2>
     <p>I have worked on many different projects. This includes:</p>
     <ul>
