--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>Contact Me: <a href="www.linkedin.com/in/chadquilling">LinkedIn</a> | <a href="https://github.com/QuilChaser">GitHub</a></p>
       <hr/>
     </div>
-    <div class="page">
+    <div class="content">
       <div class="section about">
       <h2>About Me:</h2>
         <p>My name is Chad Quilling. I am a Computer Science Major attending
