--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div class="section header">
+      <img class="profile-pic" src="img/face.jpg"/>
       <h1>Chad Quilling</h1>
-      <img src="img/face.jpg"/>
       <p>Contact Me: <a href="www.linkedin.com/in/chadquilling">LinkedIn</a> | <a href="https://github.com/QuilChaser">GitHub</a></p>
       <hr/>
     </div>
