update contact bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <div class="section header">
       <img class="profile-pic" src="img/face.jpg"/>
       <h1>Chad Quilling</h1>
-      <p>Contact Me: <a href="www.linkedin.com/in/chadquilling">LinkedIn</a> | <a href="https://github.com/QuilChaser">GitHub</a></p>
+      <div class="contacts">
+        <p>Contact Me:
+          <a href="https://www.linkedin.com/in/chadquilling">LinkedIn</a> |
+          <a href="https://github.com/QuilChaser">GitHub</a>
+        </p>
+      </div>
       <hr/>
     </div>
     <div class="content">
