--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <div class="section header">
-      <img class="profile-pic" src="img/face.jpg"/>
-      <h1>Chad Quilling</h1>
+      <div class="pic-name">
+        <img class="profile-pic" src="img/face.jpg"/>
+        <h1>Chad Quilling</h1>
+      </div>
       <div class="contacts">
         <p>Contact Me:
           <a href="https://www.linkedin.com/in/chadquilling">LinkedIn</a> |
