Update Contact List

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <h1>Chad Quilling</h1>
       </div>
       <div class="contacts">
-        <p>Contact Me:
-          <a href="https://www.linkedin.com/in/chadquilling">LinkedIn</a> |
-          <a href="https://github.com/QuilChaser">GitHub</a>
-        </p>
+        <p>Contact Me:</p>
+        <a href="https://www.linkedin.com/in/chadquilling">LinkedIn</a>
+        <a href="https://github.com/QuilChaser">GitHub</a>
       </div>
       <hr/>
     </div>
